package com.hifun.soul.proto.common;

option java_package = "com.hifun.soul.proto.common";
option java_outer_classname = "Signs";

// 星图
message StarMap {
	// 星图id
	required int32 starMapId = 1;
	// 是否已经激活
	required bool activated = 2;
}

// 星座
message Sign {
	// 星座id
	required int32 signId = 1;
	// 是否激活
	required bool activated = 2;
}



